--- a/docs/书法/文徵明小楷《千字文》.md
+++ b/docs/书法/文徵明小楷《千字文》.md
@@ -11,13 +11,13 @@
 ## 天地玄黄
 
 
-![Image_001]( https://xyqin.coding.net/p/my/d/document/git/raw/master/imgs/shufa/文徵明-小楷千字文/Image_001.png )
+![Image_001]( https://md.xushufa.cn/gitimg/document/imgs/shufa/文徵明-小楷千字文/Image_001.png )
 
 
-![Image_002]( https://xyqin.coding.net/p/my/d/document/git/raw/master/imgs/shufa/文徵明-小楷千字文/Image_002.png )
+![Image_002]( https://md.xushufa.cn/gitimg/document/imgs/shufa/文徵明-小楷千字文/Image_002.png )
 
 
-![Image_003]( https://xyqin.coding.net/p/my/d/document/git/raw/master/imgs/shufa/文徵明-小楷千字文/Image_003.png )
+![Image_003]( https://md.xushufa.cn/gitimg/document/imgs/shufa/文徵明-小楷千字文/Image_003.png )
 
 ---
 
