--- a/docs/轨迹/书法练习轨迹--明月几时有-无图版.md
+++ b/docs/轨迹/书法练习轨迹--明月几时有-无图版.md
@@ -94,7 +94,7 @@
 
 - [x] 1、20200926
 - 初始练习，自己随便写的。
-- [img1]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2020/IMG_20200926_162548.jpg )
+- [img1]( https://md.xushufa.cn/gitimg/imgs/mingyue/2020/IMG_20200926_162548.jpg )
 - 无笔法，无锋芒。自以为是，自作高深。若为书法，则是丑书典型。 --20201117
 
 ---
@@ -103,20 +103,20 @@
 
 - [x] 2、20201014
 - 临摹了几天颜真卿的《多宝塔碑》。写的**很差劲**。
-- [img2]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2020/IMG_20201014_222553.jpg )
+- [img2]( https://md.xushufa.cn/gitimg/imgs/mingyue/2020/IMG_20201014_222553.jpg )
 - 此字如婴儿学步，蹒跚而行。不整齐，不清晰，不美观。但也是千里之行，始于足下。大道之基，书法之始。 --20210126
 
 ---
 
 - [x] 3、20201017
 - 差评。
-- [img3]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2020/IMG_20201017_152320.jpg )
+- [img3]( https://md.xushufa.cn/gitimg/imgs/mingyue/2020/IMG_20201017_152320.jpg )
 
 ---
 
 - [x] 4、20201024
 - 差评。
-- [img4]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2020/IMG_20201024_223706.jpg )
+- [img4]( https://md.xushufa.cn/gitimg/imgs/mingyue/2020/IMG_20201024_223706.jpg )
 - 近一个多月（十月份）基本在练习多宝塔的偏旁部首，基本笔画。字练的少。 --20201116
 
 ---
@@ -125,7 +125,7 @@
 
 - [x] 5、20201108
 - 临摹《多宝塔碑》。
-- [img5]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2020/IMG_20201108_204444.jpg )
+- [img5]( https://md.xushufa.cn/gitimg/imgs/mingyue/2020/IMG_20201108_204444.jpg )
 - 对比之前有些进步。加油。 --20201111
 - 无一字可取。 --20201116
 
@@ -133,7 +133,7 @@
 
 - [x] 6、20201115
 - 临摹《多宝塔碑》。
-- [img6]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2020/IMG_20201115_181517.jpg )
+- [img6]( https://md.xushufa.cn/gitimg/imgs/mingyue/2020/IMG_20201115_181517.jpg )
 - 唯 “上”  “人”能看。 --20201116
 - 貌似不能示人。 --20201123
 - 这半个月（十一月上旬）开始练习多宝塔的字。--20201116
@@ -142,28 +142,28 @@
 
 - [x] 7、20201122
 - 临摹《多宝塔碑》。
-- [img7]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2020/IMG_20201122_100634.jpg )
+- [img7]( https://md.xushufa.cn/gitimg/imgs/mingyue/2020/IMG_20201122_100634.jpg )
 - 貌似没有进步。 --20201123
 
 ---
 
 - 20201122
 - 临摹《多宝塔碑》。
-- [img8]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2020/IMG_20201122_152730.jpg )
+- [img8]( https://md.xushufa.cn/gitimg/imgs/mingyue/2020/IMG_20201122_152730.jpg )
 - 坚持。古今成大事者，不唯有超世之才，亦必有坚韧不拔之志。--20201123
 
 ----
 
 - [x] 8、20201130
 - 临摹《多宝塔碑》。
-- [img9]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2020/IMG_20201128_171336.jpg )
+- [img9]( https://md.xushufa.cn/gitimg/imgs/mingyue/2020/IMG_20201128_171336.jpg )
 - 继续练。  --20201130
 
 ---
 
 - 20201130
 - 临摹《多宝塔碑》。
-- [img10]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2020/IMG_20201128_171400.jpg )
+- [img10]( https://md.xushufa.cn/gitimg/imgs/mingyue/2020/IMG_20201128_171400.jpg )
 - 临摹《春晓》，认识了几个繁体字：“覺” “暁” “處 䖏” --20201130
 
 ----
@@ -171,7 +171,7 @@
 #### 2.1.4、202012
 
 - [x] 9、20201207
-- [img11]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2020/IMG_20201206_141654.jpg )
+- [img11]( https://md.xushufa.cn/gitimg/imgs/mingyue/2020/IMG_20201206_141654.jpg )
 - 貌似日期写错了，是周日写的，应该是 20201206。  白天拍的照片更清楚，没有阴影，貌似比晚上拍的照片的字好看。   --20201214
 
 ----
@@ -193,30 +193,30 @@
 ---
 
 - 20201207
-- [img12]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2020/IMG_20201206_141644.jpg )
+- [img12]( https://md.xushufa.cn/gitimg/imgs/mingyue/2020/IMG_20201206_141644.jpg )
 - 乍一看，还可以。细品鉴，差得远。 --20201207
 
 ----
 
 - [x] 10、20201214
-- [img13]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2020/IMG_20201226_114106.jpg )
+- [img13]( https://md.xushufa.cn/gitimg/imgs/mingyue/2020/IMG_20201226_114106.jpg )
 - 继续练。保持热爱，奔赴山海。  --20201214
 
 - [x] 11、20201216
-- [img14]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2020/IMG_20201226_114305.jpg )
+- [img14]( https://md.xushufa.cn/gitimg/imgs/mingyue/2020/IMG_20201226_114305.jpg )
 - 十年如一日。练。  --20201228
 
 ---
 
 - [x] 12、20201220
-- [img15]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2020/IMG_20201226_114413.jpg )
+- [img15]( https://md.xushufa.cn/gitimg/imgs/mingyue/2020/IMG_20201226_114413.jpg )
 - 这一周多（1219-1225）比较忙，有个比较紧急的项目，需要对接微信、支付宝支付，同步账单。我负责账单相关的部分-下载微信、支付宝账单，解析文件，保存账单，分析数据。 进入了所谓闭关的状态，晚上九点之后下班。虽然忙了一点，但是值得骄傲的是每天早晚的书法练习坚持了下来，虽然每次练习没够一小时，但也是三四十分钟以上。努力就有收获，坚持就是胜利。
 - 这周忙了一点，但很不错的是双休。休息时间比较充足，周六看了华仔的《拆弹专家2》，相当精彩的大片，全程无尿点。拼多多买的电饭锅坏了，换货，周日到了，煮了饭，这次还行。另外有些新闻，美国新冠日益严重，将近两千万患者。jack马叫嚣银行是当铺思想；支付宝上市失败；阿里被中央调查组进驻，需要进一步规范。《明星大侦探6》 《奔跑吧-黄河篇》 《大江大河2》 挺好看。 --20201228
 
 ---
 
 - [x] 13、20201227
-- [img16]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2020/IMG_20210101_141310.jpg )
+- [img16]( https://md.xushufa.cn/gitimg/imgs/mingyue/2020/IMG_20210101_141310.jpg )
 - 这里从左往右写的，貌似明白古代人为何自左向右写字。因为如果自右向左，袖子上容易沾墨迹，污染文字又弄脏衣服。所以自左向右方便很多。**思追古人，绪接来者**。这是书法的魅力吧。--20201228
 - 有过则改，特此更正。古人书写习惯是自上往下，自右往左，如《兰亭集序》。网上查了一下资料，是从书简时代留下的习惯，左手执简，右手书写，更为方便省力。--20210202
 
@@ -231,7 +231,7 @@
 #### 2.2.1、202101
 
 - [x] 14、20210101
-- [img17]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202101/IMG_20210101_141402.jpg )
+- [img17]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202101/IMG_20210101_141402.jpg )
 - 练。重要的是输出，而不是消费。正如看电影要思考剧情，要写评论，否则只是娱乐，而非影评家。&ensp; &ensp;
 - 人之大敌为孤独，社交、运动、读书、听歌、练字皆可战而胜之。你的时间花在哪里？你对哪里了解的就会更多，就会超越一般人的技术水平。交朋友不需要酒肉兄弟，塑料姐妹，而是知心知己。运动需要长时间持续性的坚持，一天不可能减肥。读书需要思考，需要写笔记。所谓学而不思则罔，思而不学则殆。 因此必须抓住重点，长期坚持，时时思考，方能有所收获。--20210103
 
@@ -239,7 +239,7 @@
 
 
 - [x] 15、20210110
-- [img18]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202101/IMG_20210110_184700.jpg )
+- [img18]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202101/IMG_20210110_184700.jpg )
 
 <h4 id="j20210111"></h4>
 
@@ -263,22 +263,22 @@
 
 - [x] 16、20210118
 
-- [img19]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202101/20210111001.jpg )
-- [img20]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202101/20210112001.jpg )
+- [img19]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202101/20210111001.jpg )
+- [img20]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202101/20210112001.jpg )
 
 ---
 
-- [img21]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202101/20210113001.jpg )
-- [img22]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202101/20210114001.jpg )
+- [img21]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202101/20210113001.jpg )
+- [img22]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202101/20210114001.jpg )
 
 ---
 
-- [img23]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202101/20210115001.jpg )
-- [img24]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202101/20210116001.jpg )
+- [img23]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202101/20210115001.jpg )
+- [img24]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202101/20210116001.jpg )
 
 ---
 
-- [img25]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202101/20210117001.jpg )
+- [img25]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202101/20210117001.jpg )
 
 - 这周开始基本不用水写布，只用墨水和毛边纸练字。如果想要练好字，水写布确实不是正道，只能在逼不得已的情况下偶尔为之。因为水写布不是纸张，不能留存文字。所谓笔墨纸砚，书法要用毛笔蘸墨水写在纸上。此周基本临摹 多宝塔碑、明月几时有、登鹳雀楼、春晓。
 - 重要的事情说三遍：**别用水写布、戒躁、坚持**。别用水写布、戒躁、坚持。别用水写布、戒躁、坚持。
@@ -287,7 +287,7 @@
 ---
 
 - [x] 17、20210125
-- [img26]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202101/IMG_20210124_142157.jpg )
+- [img26]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202101/IMG_20210124_142157.jpg )
 
 <h4 id="z20210125"></h4>
 
@@ -324,38 +324,38 @@
 
 > 以下为2021-01-18至2021-01-24习作
 
-- [img27]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202101/20210118001.jpg )
-[img28]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202101/20210118002.jpg )
+- [img27]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202101/20210118001.jpg )
+[img28]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202101/20210118002.jpg )
 
 <br/>
 
-- [img29]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202101/20210119001.jpg )
-[img30]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202101/20210119002.jpg )
+- [img29]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202101/20210119001.jpg )
+[img30]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202101/20210119002.jpg )
 
 ---
 
-- [img31]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202101/20210120001.jpg )
-[img32]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202101/20210120002.jpg )
+- [img31]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202101/20210120001.jpg )
+[img32]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202101/20210120002.jpg )
 
 <br/>
 
-- [img33]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202101/20210121001.jpg )
-[img34]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202101/20210121002.jpg )
+- [img33]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202101/20210121001.jpg )
+[img34]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202101/20210121002.jpg )
 
 ---
 
-- [img35]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202101/20210122001.jpg )
-[img36]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202101/20210122002.jpg )
+- [img35]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202101/20210122001.jpg )
+[img36]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202101/20210122002.jpg )
 
 <br/>
 
-- [img37]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202101/20210123001.jpg )
-[img38]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202101/20210123002.jpg )
+- [img37]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202101/20210123001.jpg )
+[img38]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202101/20210123002.jpg )
 
 ---
 
-- [img39]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202101/20210124001.jpg )
-[img40]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202101/20210124002.jpg )
+- [img39]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202101/20210124001.jpg )
+[img40]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202101/20210124002.jpg )
 
 <br/>
 
@@ -369,38 +369,38 @@
 
 - [x] 18、20210201
 
-- [img41]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202101/20210125001.jpg )
-[img42]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202101/20210125002.jpg )
+- [img41]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202101/20210125001.jpg )
+[img42]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202101/20210125002.jpg )
 
 <br/>
 
-- [img43]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202101/20210126001.jpg )
-[img44]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202101/20210126002.jpg )
+- [img43]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202101/20210126001.jpg )
+[img44]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202101/20210126002.jpg )
 
 ---
 
-- [img45]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202101/20210127001.jpg )
-[img46]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202101/20210127002.jpg )
+- [img45]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202101/20210127001.jpg )
+[img46]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202101/20210127002.jpg )
 
 <br/>
 
-- [img47]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202101/20210128001.jpg )
-[img48]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202101/20210128002.jpg )
+- [img47]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202101/20210128001.jpg )
+[img48]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202101/20210128002.jpg )
 
 ---
 
-- [img49]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202101/20210129001.jpg )
-[img50]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202101/20210129002.jpg )
+- [img49]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202101/20210129001.jpg )
+[img50]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202101/20210129002.jpg )
 
 <br/>
 
-- [img51]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202101/20210130001.jpg )
-[img52]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202101/20210130002.jpg )
+- [img51]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202101/20210130001.jpg )
+[img52]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202101/20210130002.jpg )
 
 ---
 
-- [img53]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202101/20210131001.jpg )
-[img54]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202101/20210131002.jpg )
+- [img53]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202101/20210131001.jpg )
+[img54]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202101/20210131002.jpg )
 
 <br/>
 
@@ -413,17 +413,17 @@
 
 - [x] 19、20210207
 
-- [img55]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202102/20210204001.jpg )
+- [img55]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202102/20210204001.jpg )
 
-- [img56]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202102/20210207001.jpg )
+- [img56]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202102/20210207001.jpg )
 
 ---
 
 > 20210204002
-- [img57]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202102/20210204002.jpg )
+- [img57]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202102/20210204002.jpg )
 
 >20210207002
-- [img58]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202102/20210207002.jpg )
+- [img58]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202102/20210207002.jpg )
 
 - 要过年了，加油。春节将至，假日来临，保持练字。 
 天下大事必作于细，天下难事必作于易。王羲之是从一池变黑的水逐步成为书圣，文徵明七八十岁还是每天临帖不辍，书法需要天赋更需要不懈的坚持。  --20210209
@@ -434,22 +434,22 @@
 
 > 二零二一二月八号，当天参加了一个业余书法活动
 
-- [img59]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202102/20210208001_.jpg )
+- [img59]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202102/20210208001_.jpg )
 
 ---
 
-- [img60]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202102/20210208002.jpg )
-- [img61]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202102/20210209001.jpg )
+- [img60]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202102/20210208002.jpg )
+- [img61]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202102/20210209001.jpg )
 
 <br/>
 
-- [img62]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202102/20210210001.jpg )
-- [img63]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202102/20210212001.jpg )
+- [img62]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202102/20210210001.jpg )
+- [img63]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202102/20210212001.jpg )
 
 <br/>
 
-- [img64]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202102/20210213001.jpg )
-- [img65]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202102/20210214001.jpg )
+- [img64]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202102/20210213001.jpg )
+- [img65]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202102/20210214001.jpg )
 
 - 二零二一二月十一为除夕，春节过年了。年前（二月八号）参加了一个书法活动，是杭州西湖雷峰塔不远处的一家民宿组织的。来了六七人，有两位女生练字多年，是高手，其他都是菜鸟。大家喝喝茶，嗑嗑瓜子，聊聊天。不错。<br/>
 - 过年是留在杭州没回老家，领到了1000元留杭大红包（新冠疫情影响，政府鼓励提倡“非必要不返乡”），点赞。除夕夜饭店、超市基本都关门了，在麦当劳吃晚饭的，人还不少。然后八点钟看春晚，顺便整理便签文档。这个年过的也还行。 <br/>
@@ -458,21 +458,21 @@
 
 - [x] 21、20210222
 
-- [img66]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202102/20210216000001.jpg )
-- [img67]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202102/20210217000001.jpg )
+- [img66]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202102/20210216000001.jpg )
+- [img67]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202102/20210217000001.jpg )
 
 <br/>
 
-- [img68]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202102/20210218000001.jpg )
-- [img69]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202102/20210221000001.jpg )
+- [img68]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202102/20210218000001.jpg )
+- [img69]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202102/20210221000001.jpg )
 - 坚持不易，且行且珍惜。  --20210223  <br/>
 - 为名，为利，做一件事，不是发自内心的热爱，很难做的好，做的长。保持初心，顺其自然，乐在其中，方能长久。  --20210225
 
 
 - [x] 22、20210301
 
-- [img70]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202102/20210223000001.jpg )
-- [img71]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202102/20210225000001.jpg )
+- [img70]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202102/20210223000001.jpg )
+- [img71]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202102/20210225000001.jpg )
 
 - 周四（2月25）看房子。周五（2月26）搬家。周六（2月27）回老家相亲。这周事情比较密集，而且换了新环境，租房比之前的小了点，需要几天习惯。因此练字时间短了点。<br/>
 - 生活还是要靠工作，兴趣爱好只是调剂。重点重心还是要放在提高专业技能以及一些人生大事上，有空闲有余力再做一些其他事情。--20210302  
@@ -481,12 +481,12 @@
 
 - [x] 23、20210308
 
-- [img72]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202103/20210303001.jpg )
-- [img73]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202103/20210304001.jpg )
+- [img72]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202103/20210303001.jpg )
+- [img73]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202103/20210304001.jpg )
 
 <br/>
 
-- [img74]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202103/202103060001.jpg )
+- [img74]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202103/202103060001.jpg )
 
 - 本周（20210301-22010307）练字较少。生活中的琐事较多，工作、相亲、房子等等。心不在此，何以安定。--20210308 <br/>
 - 生活是动态的，人是变化的，不能时刻紧绷，要适当放松，书法是一种简单、实惠、合理、有深度的休闲方式。正如前几天我满心满脑的想着房子的事，想着提高技能、涨工资的事。但冲动期一过，冷静的想想，生活是一种平衡，需要不断学习也要适当放松。--20210312
@@ -541,18 +541,18 @@
 
 - [x] 24、20210314
 
-- [img75]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202103/202103090001.jpg )
-- [img76]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202103/202103100001.jpg )
+- [img75]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202103/202103090001.jpg )
+- [img76]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202103/202103100001.jpg )
 
 <br/>
 
-- [img77]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202103/202103110001.jpg )
-- [img78]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202103/202103120001.jpg )
+- [img77]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202103/202103110001.jpg )
+- [img78]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202103/202103120001.jpg )
 
 <br/>
 
-- [img79]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202103/202103120002.jpg )
-- [img80]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202103/202103120003.jpg )
+- [img79]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202103/202103120002.jpg )
+- [img80]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202103/202103120003.jpg )
 
 - 本周（20210308-20210314）更新比较早，一般情况应该是次周一记录当周练习，今天想写然后就写了。所谓乘兴而来，兴尽而返是也。<br/>
 - **书法于我而言，可修心养性，陶冶情操，培养良好的作息习惯，丰富匮乏的精神生活**。把打游戏，看直播，看电影电视综艺这些比较娱乐比较浪费时间的活动放在练字上，放在充实生活，提高技能上。<br/>
@@ -562,8 +562,8 @@
 
 - [x] 25、20210322
 
-- [img81]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202103/202103140001.jpg )
-- [img82]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202103/202103170001.jpg )
+- [img81]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202103/202103140001.jpg )
+- [img82]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202103/202103170001.jpg )
 
 - 前几周杂事较多，并且都是单休，周末基本没有属于自己的时间。这周末（0320-0321）双休，但是天气不是太好，没有出去。于是抽空把小区熟悉一下，绕着小区内部转了一圈。<br/>
 - 这两天主要就是整理资料、看点综艺、学习java、散步、看小说等等。<br/>
@@ -573,23 +573,23 @@
 
 - [x] 26、20210329
 
-- [img83]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202103/202103220001.jpg )
-- [img84]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202103/202103220002.jpg )
+- [img83]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202103/202103220001.jpg )
+- [img84]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202103/202103220002.jpg )
 
 <br/>
 
-- [img85]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202103/202103240001.jpg )
-- [img86]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202103/202103240002.jpg )
+- [img85]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202103/202103240001.jpg )
+- [img86]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202103/202103240002.jpg )
 
 ---
 
-- [img87]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202103/202103280001.jpg )
-- [img88]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202103/202103280002.jpg )
+- [img87]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202103/202103280001.jpg )
+- [img88]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202103/202103280002.jpg )
 
 <br/>
 
-- [img89]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202103/202103280003.jpg )
-- [img90]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202103/202103280004.jpg )
+- [img89]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202103/202103280003.jpg )
+- [img90]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202103/202103280004.jpg )
 
 - 还是写的不咋地，继续练吧。  --20210329
 
@@ -608,23 +608,23 @@
 
 - [x] 27、20210405
 
-- [img91]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202104/2021033101.jpg )
-- [img92]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202104/2021033102.jpg )
+- [img91]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202104/2021033101.jpg )
+- [img92]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202104/2021033102.jpg )
 
 <br/>
 
-- [img93]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202104/2021040201.jpg )
-- [img94]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202104/2021040202.jpg )
+- [img93]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202104/2021040201.jpg )
+- [img94]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202104/2021040202.jpg )
 
 <br/>
 
-- [img95]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202104/2021040203.jpg )
-- [img96]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202104/2021040204.jpg )
+- [img95]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202104/2021040203.jpg )
+- [img96]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202104/2021040204.jpg )
 
 <br/>
 
-- [img97]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202104/2021040301.jpg )
-- [img98]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202104/2021040302.jpg )
+- [img97]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202104/2021040301.jpg )
+- [img98]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202104/2021040302.jpg )
 
 
 - 练字让我冷静。 <br/>
@@ -645,13 +645,13 @@
 
 - [x] 28、20210412
 
-- [img99]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202104/2021040501.jpg )
-- [img100]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202104/2021040801.jpg )
+- [img99]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202104/2021040501.jpg )
+- [img100]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202104/2021040801.jpg )
 
 <br/>
 
-- [img101]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202104/2021041101.jpg )
-- [img102]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202104/2021041102.jpg )
+- [img101]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202104/2021041101.jpg )
+- [img102]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202104/2021041102.jpg )
 
 - 一寸光阴一寸金，寸金难买寸光阴。--20210412
 
@@ -659,13 +659,13 @@
 
 - [x] 29、20210419
 
-- [img103]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202104/2021041301.jpg )
-- [img104]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202104/2021041301.jpg )
+- [img103]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202104/2021041301.jpg )
+- [img104]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202104/2021041301.jpg )
 
 <br/>
 
-- [img105]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202104/2021041601.jpg )
-- [img106]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202104/2021041602.jpg )
+- [img105]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202104/2021041601.jpg )
+- [img106]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202104/2021041602.jpg )
 
 - 近期大事 <br/>
 - 1、四月九号  <br/>
@@ -697,28 +697,28 @@
 
 - [x] 30、20210426
 
-- [img107]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202104/2021041901.jpg )
-- [img108]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202104/2021041902.jpg )
+- [img107]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202104/2021041901.jpg )
+- [img108]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202104/2021041902.jpg )
 
 <br/>
 
-- [img109]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202104/2021041903.jpg )
-- [img110]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202104/2021042001.jpg )
+- [img109]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202104/2021041903.jpg )
+- [img110]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202104/2021042001.jpg )
 
 <br/>
 
-- [img111]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202104/2021042002.jpg )
-- [img112]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202104/2021042003.jpg )
+- [img111]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202104/2021042002.jpg )
+- [img112]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202104/2021042003.jpg )
 
 <br/>
 
-- [img113]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202104/2021042501.jpg )
-- [img114]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202104/2021042502.jpg )
+- [img113]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202104/2021042501.jpg )
+- [img114]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202104/2021042502.jpg )
 
 <br/>
 
-- [img115]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202104/2021042503.jpg )
-- [img116]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202104/2021042504.jpg )
+- [img115]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202104/2021042503.jpg )
+- [img116]( https://md.xushufa.cn/gitimg/imgs/mingyue/2021/202104/2021042504.jpg )
 
 - 练字即练心，心静则神定。漫漫人生，知足常乐。  --20210425
 
@@ -1710,7 +1710,7 @@ https://so.gushiwen.cn/mingju/juv_94d4f65964c4.aspx
 
 ```
 
-- [img245]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/other/20211011_hangzhou_weather.jpg )
+- [img245]( https://md.xushufa.cn/gitimg/imgs/other/20211011_hangzhou_weather.jpg )
 
 ---
 
@@ -1813,7 +1813,7 @@ flomo = flow + memo
 
 ```
 
-- [img260]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/other/20211108_hangzhou_weather.jpg )
+- [img260]( https://md.xushufa.cn/gitimg/imgs/other/20211108_hangzhou_weather.jpg )
 
 ---
 
@@ -2718,6 +2718,45 @@ I think, therefore I am.<br>
 做自己喜欢的事。<br>
 用自己的方式过完一生。<br>
 
+---
+
+- [x] 94、20220801
+
+- [img363]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202207/2022072701.jpg )
+- [img364]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202207/2022073101.jpg )
+
+近期事件总结：诚实的周公子，精神不内耗的二舅，晒工资的中金媳妇，给了小镇做题家以很大的精神打击。<br>
+原因貌似有，阶级固化，脱离群众，贫富差距加大。<br>
+解决方法是，野蛮其体魄，文明其精神。<br>
+
+
+莫名想起一些诗句：
+天地不仁，以万物为刍狗。<br>
+天行有常，不为尧存，不为桀亡。<br>
+天行健，君子以自强不息。地势坤，君子以厚德载物。<br>
+--记于二零二二八一，辗转难眠，故有此笔。
+
+---
+
+#### 2.3.8、202208
+
+- [x] 95、20220808
+
+- [img365]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202208/2022080301.jpg )
+- [img366]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202208/2022080501.jpg )
+
+变是惟一的不变。
+
+---
+
+- [x] 96、20220815
+
+- [img367]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202208/2022081101.jpg )
+
+七月如火，八月如荼。<br>
+四十高温，依然炙热。<br>
+
+
 
 <div STYLE="page-break-after: always;"></div>
 
@@ -2843,7 +2882,8 @@ I think, therefore I am.<br>
 
 | 无为徐生   | 微信公众号                                               	 |  &ensp; |  今日头条号        |
 | ---------  | ------------------------------------------------------------- |  -      |  ----------        |
-|  二维码    | - [img_wx]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/other/wuweixusheng_weixin.png ) | <br/> | - [img_tt]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/other/wuweixusheng_toutiao.png )     |
+|  二维码    | - [img_wx]( https://md.xushufa.cn/gitimg/imgs/other/wuweixusheng_weixin.png ) | <br/> | - [img_tt]( https://md.xushufa.cn/gitimg/imgs/other/wuweixusheng_toutiao.png )     |
+
 
 ***
 
